<resources>
    <string name="canvasVersionNum">Version:</string>
    <string name="canvasLogo">Canvas Logo</string>
    <string name="app_name">Canvas</string>
    <string name="enterURL">Enter your Canvas URL:</string>
    <string name="exampleURLSimple">myschool.instructure.com</string>
    <string name="signIntoCanvasNetwork">Trying to sign into Canvas Network?</string>
    <string name="mobileVerifyGeneral">This app is not authorized for use</string>
    <string name="mobileVerifyDomainUnauthorized">The server you entered is not authorized for this app.</string>
    <string name="mobileVerifyUserAgentUnauthorized">The user agent for this app is unauthorized.</string>
    <string name="mobileVerifyUnknownError">We were unable to verify the server for use with this app.</string>
    <string name="okay">Okay</string>
    <string name="options">Options</string>
    <string name="discussionAttachment">Attach a file</string>
    <string name="discussionUpload">Upload video or audio</string>
    <string name="discussionPostEditing">Edit</string>
    <string name="removeUser">Remove this user?</string>
    <string name="removedForever">You\'ll have to sign into this user again to access their content.</string>
    <string name="bookmarksTitle">Bookmarks</string>
    <string name="addBookmark">Add Bookmark</string>
    <string name="bookmarkName">Label</string>
    <string name="bookmarkTitleRequired">A Label is Required</string>
    <string name="bookmarkAddedSuccess">Bookmark Created</string>
    <string name="bookmarkAddedFailure">Bookmark could not be created</string>
    <string name="bookmarkShortcut">Select a Bookmark</string>
    <string name="bookmarkDeleted">Bookmark Removed</string>
    <string name="bookmarkDelete">Remove Bookmark?</string>
    <string name="bookmarkEdit">Edit Bookmark</string>
    <string name="bookmarkUpdated">Bookmark Updated</string>
    <string name="no_bookmarks">Create a bookmark then view it here!</string>
    <string name="today">Today</string>
    <string name="past">Past</string>
    <string name="noDate">No Date</string>
    <string name="future">Future</string>
    <string name="next7Days">Next 7 Days</string>
    <string name="days">Days</string>
    <string name="assignmentDue">Due</string>
    <string name="assignmentDueColon">Due: </string>
    <string name="assignmentLastSubmission">Last Submission</string>
    <string name="assignmentNoSubmission">None</string>
    <string name="assignmentTabDetails">Details</string>
    <string name="assignmentTabSubmission">Submissions</string>
    <string name="assignmentTabGrade">Grade</string>
    <string name="assignmentLocked">Locked</string>
    <string name="assignments">Assignments</string>
    <string name="freeFormRubricPoints" formatted="false">%s / %s</string>
    <string name="noRubric">There is no rubric for this assignment.</string>
    <string name="noDescription">There is no description for this assignment</string>
    <string name="noAssignmentsInGroup">No Assignments in this group</string>
    <string name="excusedAssignment">This assignment is excused and will not be considered in the total calculation</string>
    <string name="droppedAssignment">This assignment is dropped and will not be considered in the total calculation</string>
    <string name="excused">EX</string>
    <string name="mutedText">Grades are unavailable because the instructor is working on them.</string>
    <string name="points">Points\u0020</string>
    <string name="assignmentGroup">Assignment Group:\u0020</string>
    <string name="gradingType">Grading Type:\u0020</string>
    <string name="submissionType">Submission Type:\u0020</string>
    <string name="editAssignment">Edit Assignment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sendNotification">Notify users that this content has changed</string>
    <string name="forbidden">Replies are only visible to those who have posted at least one reply.</string>
    <string name="Starts">Starts</string>
    <string name="Ends">Ends</string>
    <string name="allDayEvent">All Day Event</string>
    <string name="at">at</string>
    <string name="PersonalCalendar">Personal Calendar</string>
    <string name="noLocation">No Location Specified</string>
    <string name="discussion">Discussions</string>
    <string name="closed_discussion">Closed for Comments</string>
    <string name="discussionUploadDialog">Discussion Upload</string>
    <string name="totalScore">Total:</string>
    <string name="noGradeText">N/A</string>
    <string name="checkBoxFinalGradeOption">Base on graded assignments</string>
    <string name="checkBoxWhatIfGradeOption">Show What-If Score</string>
    <string name="whatIfDialogText">What-If Score</string>
    <string name="inbox">Inbox</string>
    <string name="unread">Unread</string>
    <string name="archived">Archived</string>
    <string name="sent">Sent</string>
    <string name="grade">Grade</string>
    <string name="monologue">Monologue</string>
    <string name="noItemsToDisplayShort">No items to display</string>
    <string name="emptyCalendarDate">Nothing Planned For</string>
    <string name="emptyCalendarWeek">Nothing Planned For The Week</string>
    <string name="emptyCalendarMonth">Nothing Planned For The Month</string>
    <string name="selectCanvasCalendars">Select Up To 10 Calendars</string>
    <string name="noDatesSelected">Please select a date</string>
    <string name="Todo">To-do</string>
    <string name="Event">Event</string>
    <string name="eventSuccessfulCreation">Event was successfully created</string>
    <string name="eventSuccessfulDeletion">Event was successfully deleted</string>
    <string name="newEvent">New Event</string>
    <string name="enterTitle">Enter Title</string>
    <string name="enterLocation">Enter Location</string>
    <string name="addNote">Add Note</string>
    <string name="titleIconDescription">Title Icon</string>
    <string name="dateIconDescription">Date Icon</string>
    <string name="locationIconDescription">Location Icon</string>
    <string name="noteIconDescription">Note Icon</string>
    <string name="toDoTurnIn">Turn in</string>
    <string name="toDoNoDueDate">No Due Date</string>
    <string name="dueAt">Due at</string>
    <string name="toDoDue">Due</string>
    <string name="toDoNeedsGrading">needs grading</string>
    <string name="toDoNeedGrading">need grading</string>
    <string name="myFiles">Files</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authenticationRequired">Authentication Required</string>
    <string name="invalidEmailPassword">Invalid email or password</string>
    <string name="loginId">Login ID</string>
    <string name="domain">Domain</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="sendMail">Send Email&#8230;</string>
    <string name="mobileSupportEmailAddress">mobilesupport@instructure.com</string>
    <string name="supportEmailAddress">support@instructure.com</string>
    <string name="edit">Edit</string>
    <string name="singleItem">item</string>
    <string name="multipleItems">items</string>
    <string name="archive">Archive</string>
    <string name="moveToInbox">Move to Inbox</string>
    <string name="markAsUnread">Mark as Unread</string>
    <string name="selectPeopleInbox">Select People</string>
    <string name="delete">Delete</string>
    <string name="deleteEvent">Delete Event</string>
    <string name="selected">Selected</string>
    <string name="errorSendingMessage">An error occurred trying to send your message. Please try again.</string>
    <string name="errorPostingComment">An error occurred trying to post your submission comment. Please try again.</string>
    <string name="deletedConversation">That conversation has been deleted.</string>
    <string name="uploadAvatarFailMsg">New avatar picture failed to upload</string>
    <string name="fileNotFound">File not found.</string>
    <string name="reply">Reply&#8230;</string>
    <string name="writeAMessage">Write a message…</string>
    <string name="composeMessage">Compose Message</string>
    <string name="successSendingMessage">Message was successfully sent.</string>
    <string name="emptyMessage">The message cannot be blank!</string>
    <string name="noRecipients">No Recipients</string>
    <string name="send">Send</string>
    <string name="users">Users</string>
    <string name="individually">Individually</string>
    <string name="versionNum">Version:</string>
    <string name="allCourses">All Courses</string>
    <string name="open">Open</string>
    <string name="openAlternate">Open with alternate app</string>
    <string name="opening">Opening File&#8230;</string>
    <string name="download">Download</string>
    <string name="hideExtras">Hide Extras</string>
    <string name="showExtras">Show Extras</string>
    <string name="messageAttachments">Message Attachments</string>
    <string name="discussionAttachmentLabel">Attachment</string>
    <string name="ok">OK</string>
    <string name="with">with</string>
    <string name="starConversation">Star Conversation</string>
    <string name="deleteConversation">Delete Conversation</string>
    <string name="sharedWith">Shared with \u0020</string>
    <string name="sharedWithYou">Shared with you</string>
    <string name="groupDialogTitle">Group Message?</string>
    <string name="groupDialogMessage">Add everyone to a single group conversation, or message everyone individually?</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <string name="groupMembers">Group Members</string>
    <string name="loading">Loading&#8230;</string>
    <string name="select_item_to_display">Select from the list</string>
	<string name="syllabus">Syllabus</string>
	<string name="coursePeople">People</string>
	<string name="teachersTas">Teachers &amp; TAs</string>
	<string name="students">Students</string>
    <string name="observers">Observers</string>
	<string name="canvas">Canvas</string>
	<string name="chooseRecipient">Choose Recipient(s)</string>
    <string name="messageHasNoRecipients">This message currently has no recipients.</string>
    <string name="areNotSupported"> are not supported.</string>
    <string name="openInBrowser">Open In Browser</string>
    <string name="sadPanda">Sad Panda Image</string>
    <string name="EULA">EULA</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="termsOfUse">Terms of Use</string>
    <string name="openSource">Open Source</string>
    <string name="askInstructor">Ask Your Instructor a Question</string>
    <string name="askInstructorDetails">Questions are submitted to your instructor</string>
    <string name="searchGuides">Search the Canvas Guides</string>
    <string name="searchGuidesDetails">Find answers to common questions</string>
    <string name="reportProblem">Report a Problem</string>
    <string name="reportProblemDetails">If the app misbehaves, let us know</string>
    <string name="requestFeature">Request a Feature</string>
    <string name="requestFeatureDetails">Have an idea to improve the app?</string>
    <string name="shareYourLove">Share Your Love for the App</string>
    <string name="shareYourLoveDetails">Tell us about your favorite parts of the app</string>
    <string name="whichCourse">Which course is this question about?</string>
    <string name="allTeachers">This message will be sent to all Teachers and TAs in the course</string>
    <string name="calendarDay">Day</string>
    <string name="calendarWeek">Week</string>
    <string name="calendarMonth">Month</string>
    <string name="selectCalendars">Select Calendars</string>
    <string name="createNewCalendarEvent">Create New Event</string>
</resources>