<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/calendarToday"
        android:icon="@drawable/ic_today_white_24"
        app:showAsAction="always"
        android:title="@string/today"/>

    <item
        android:id="@+id/calendarDayView"
        app:showAsAction="never"
        android:title="@string/calendarDay"
        android:checkable="true"/>

    <item
        android:id="@+id/calendarWeekView"
        app:showAsAction="never"
        android:title="@string/calendarWeek"
        android:checkable="true"/>

    <item
        android:id="@+id/calendarMonthView"
        app:showAsAction="never"
        android:title="@string/calendarMonth"
        android:checkable="true"/>

    <item
        android:id="@+id/selectCalendars"
        app:showAsAction="never"
        android:title="@string/selectCalendars"/>

    <item
        android:id="@+id/createEvent"
        app:showAsAction="never"
        android:title="@string/createNewCalendarEvent"/>

</menu>