<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

    <TextView
        android:id="@+id/select_course"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/TextStyle.Primary"
        android:text="@string/whichCourse"/>

    <TextView
        android:id="@+id/all_teachers"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/TextStyle.Secondary"
        android:layout_below="@id/select_course"
        android:text="@string/allTeachers"
        android:layout_marginBottom="10dp"/>

    <Spinner
        android:id="@+id/course_spinner"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/all_teachers"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/course_spinner"
        android:layout_marginBottom="10dp"
        android:hint="@string/composeMessage"/>

</RelativeLayout>