<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/sadPanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/sadPanda"
            android:scaleType="centerInside"
            android:src="@drawable/unsupported_panda"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/sadPanda"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/featureText"
                style="@style/TextStyle.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/areNotSupported"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/openInBrowser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openInBrowser" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>